fixing video on mobile

--- a/postcard-core/styles/postcard.sass
+++ b/postcard-core/styles/postcard.sass
@@ -124,7 +124,7 @@ ul.postcard-feed
     display: block
     float: left
     margin-top: 10/$em
-    margin-left: 80/$em
+    margin-left: 64/$em
     padding: 5/$em
     +single-box-shadow($medium-grey, 0, 0, 2px, 1px)
     @media all and (max-width: 480px)
